force-app/main/default/objects/Account/fields/Count_Of_Opport__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Opport__c</fullName>
    <label>Count Of Opport</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>