force-app/main/default/objects/Account/fields/country_list__c.field-meta.xml
<CustomField>
    <fullName>country_list__c</fullName>
    <label>country list</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AF$Afghanistan</fullName>
            </value>
            <value>
                <fullName>AL$Albania</fullName>
            </value>
            <value>
                <fullName>DZ$Algeria</fullName>
            </value>
            <value>
                <fullName>AS$American Samoa</fullName>
            </value>
            <value>
                <fullName>AD$Andorra</fullName>
            </value>
            <value>
                <fullName>AO$Angola</fullName>
            </value>
            <value>
                <fullName>AI$Anguilla</fullName>
            </value>
            <value>
                <fullName>AQ$Antarctica</fullName>
            </value>
            <value>
                <fullName>AG$Antigua And Barbuda</fullName>
            </value>
            <value>
                <fullName>AR$Argentina</fullName>
            </value>
            <value>
                <fullName>AM$Armenia</fullName>
            </value>
            <value>
                <fullName>AW$Aruba</fullName>
            </value>
            <value>
                <fullName>AU$Australia</fullName>
            </value>
            <value>
                <fullName>AT$Austria</fullName>
            </value>
            <value>
                <fullName>AZ$Azerbaijan</fullName>
            </value>
            <value>
                <fullName>BS$Bahamas</fullName>
            </value>
            <value>
                <fullName>BH$Bahrain</fullName>
            </value>
            <value>
                <fullName>BD$Bangladesh</fullName>
            </value>
            <value>
                <fullName>BB$Barbados</fullName>
            </value>
            <value>
                <fullName>BY$Belarus</fullName>
            </value>
            <value>
                <fullName>BE$Belgium</fullName>
            </value>
            <value>
                <fullName>BZ$Belize</fullName>
            </value>
            <value>
                <fullName>BJ$Benin</fullName>
            </value>
            <value>
                <fullName>BM$Bermuda</fullName>
            </value>
            <value>
                <fullName>BT$Bhutan</fullName>
            </value>
            <value>
                <fullName>BO$Bolivia</fullName>
            </value>
            <value>
                <fullName>BA$Bosnia And Herzegovina</fullName>
            </value>
            <value>
                <fullName>BW$Botswana</fullName>
            </value>
            <value>
                <fullName>BV$Bouvet Island</fullName>
            </value>
            <value>
                <fullName>BR$Brazil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>