force-app/main/default/objects/Account/fields/Diff__c.field-meta.xml
<CustomField>
    <fullName>Diff__c</fullName>
    <formula>ROUND((NOW()- Latest_Opportunity_Creation_Date__c)*24,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>