force-app/main/default/objects/Account/fields/ext_id__c.field-meta.xml
<CustomField>
    <fullName>ext_id__c</fullName>
    <label>ext_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>