force-app/main/default/objects/Account/fields/Has_Open_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Oppty__c</fullName>
    <label>Has Open Oppty</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>