force-app/main/default/objects/Account/fields/Latest_Opportunity_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opportunity_Creation_Date__c</fullName>
    <label>Latest Opportunity Creation Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>