force-app/main/default/objects/Account/fields/memberCount__c.field-meta.xml
<CustomField>
    <fullName>memberCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>memberCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>