force-app/main/default/objects/Account/fields/opp_amount__c.field-meta.xml
<CustomField>
    <fullName>opp_amount__c</fullName>
    <label>opp amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>