force-app/main/default/objects/Account/fields/Update_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Update_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Contacts?</label>
    <type>Checkbox</type>
</CustomField>