force-app/main/default/objects/Account/validationRules/Billing_City_is_not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_City_is_not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( BillingCity )</errorConditionFormula>
    <errorMessage>Billing City Cannot be empty</errorMessage>
</ValidationRule>