force-app/main/default/objects/Account/validationRules/Diff_of_Opp_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Diff_of_Opp_Creation</fullName>
    <active>false</active>
    <errorConditionFormula>Diff__c &gt;1</errorConditionFormula>
    <errorMessage>You cant  reate  2 opportunities in 1 hours interval!!!!!!!!!!!!!</errorMessage>
</ValidationRule>