force-app/main/default/objects/Account/validationRules/SLA_field_restrcition.validationRule-meta.xml
<ValidationRule>
    <fullName>SLA_field_restrcition</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Has_Open_Oppty__c &gt; 0,
 ISCHANGED( SLA__c ) 
)</errorConditionFormula>
    <errorDisplayField>SLA__c</errorDisplayField>
    <errorMessage>SLA cannot be changed if any Oppty is open.</errorMessage>
</ValidationRule>